<resources>
    <string name="app_name">GestionDeUsuarios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_lista_usuarios">Lista de usuarios</string>
    <string name="txt_editar_usuario">Editar Usuario</string>
    <string name="description_lista_contactos">Se listan los usuarios</string>
    <string name="img_de_elimitar_user">"es la imagen que te permite elimanr un user "</string>
    <string name="img_de_user">imagen del usuario</string>
    <string name="txt_nombre">Nombres:</string>
    <string name="txt_dni">DNI:</string>
    <string name="txt_email">Email:</string>
    <string name="btn_update_user">Actualizar Informacion</string>
    <string name="hint_dni">Ingrese DNI</string>
    <string name="hint_email">Ingrese email</string>
    <string name="hint_name">Ingrese nombres</string>
    <string name="txt_agregar_user">Agregar Usuario</string>
    <string name="btn_add_user">Agregar nuevo usuario</string>
    <string name="sv_usuarios_search">Ingrese el nombre de un usuario</string>
    <string name="btn_aleatorio">Ordenar aleatoriamente</string>
</resources>